<resources>
    <string name="app_name">Lock and Key</string>
    <string name="title_activity_profile_view">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_register">Register New User</string>
    <string name="title_activity_generator_view">GeneratorView</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="number_of_characters">Number of Characters</string>
    <string name="number_of_lower_case">Number of Lower Case</string>
    <string name="number_of_symbols">Number of Symbols</string>
    <string name="number_of_numbers">Number of Numbers</string>
    <string name="included_phrase">Included Phrase</string>
    <string name="generate">Generate</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="add_items_using_plus_button">Add Items Using Plus Button</string>
    <string name="textview">TextView</string>
    <string name="import_word">Import</string>
    <string name="export">Export</string>
    <string name="password_generator">Password Generator</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="lock_amp_key"><![CDATA[Lock & Key]]></string>
    <string name="add_profile">Add Profile</string>
    <string name="title_activity_add_profile_view">AddProfileView</string>
    <string name="title_activity_finge_print_authentication">FingePrintAuthentication</string>
</resources>
