<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jodeci.passwordmanager.Generator.GeneratorView"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/generator_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorPrimary"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generator_toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtPhrase"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="3"
                android:inputType="textPersonName"
                android:textColorHighlight="@android:color/black"
                android:textColorLink="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lblPhrase"
                app:layout_constraintTop_toBottomOf="@+id/swtch_numbers" />

            <NumberPicker
                android:id="@+id/np_num"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@+id/np_lower"
                app:layout_constraintTop_toBottomOf="@+id/np_lower" />

            <TextView
                android:id="@+id/lblTestArea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal|center"
                android:text="test"
                android:textColor="@android:color/black"
                android:textIsSelectable="true"
                android:textSize="60sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnGenerate" />

            <NumberPicker
                android:id="@+id/np_char"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/swtch_chars"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="8dp" />

            <Switch
                android:id="@+id/swtch_numbers"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:text="@string/number_of_numbers"
                android:textSize="18sp"
                android:thumbTint="@color/colorPrimary"
                android:trackTint="@color/floatingColor"
                app:layout_constraintEnd_toStartOf="@+id/np_num"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swtch_lower" />

            <Switch
                android:id="@+id/swtch_chars"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:text="@string/number_of_characters"
                android:textSize="18sp"
                android:thumbTint="@color/colorPrimary"
                android:trackTint="@color/floatingColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/swtch_caps"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:text="Number of Capitals"
                android:textSize="18sp"
                android:thumbTint="@color/colorPrimary"
                android:trackTint="@color/floatingColor"
                app:layout_constraintEnd_toStartOf="@+id/np_cap"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swtch_chars" />

            <NumberPicker
                android:id="@+id/np_lower"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/np_symbol"
                app:layout_constraintTop_toBottomOf="@+id/np_symbol" />

            <NumberPicker
                android:id="@+id/np_symbol"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/np_cap"
                app:layout_constraintTop_toBottomOf="@+id/np_cap" />

            <Button
                android:id="@+id/btnGenerate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_states"
                android:text="@string/generate"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPhrase" />

            <TextView
                android:id="@+id/lblPhrase"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="left|center"
                android:padding="10dp"
                android:text="@string/included_phrase"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swtch_numbers"
                android:layout_marginLeft="8dp" />

            <NumberPicker
                android:id="@+id/np_cap"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/np_char"
                app:layout_constraintTop_toBottomOf="@+id/np_char" />

            <Switch
                android:id="@+id/swtch_lower"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:checked="true"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:text="@string/number_of_lower_case"
                android:textSize="18sp"
                android:thumbTint="@color/colorPrimary"
                android:trackTint="@color/floatingColor"
                app:layout_constraintEnd_toStartOf="@+id/np_lower"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swtch_symbols" />

            <Switch
                android:id="@+id/swtch_symbols"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:text="@string/number_of_symbols"
                android:textSize="18sp"
                android:thumbTint="@color/colorPrimary"
                android:trackTint="@color/floatingColor"
                app:layout_constraintEnd_toStartOf="@+id/np_symbol"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swtch_caps" />

            <TextView
                android:id="@+id/lblNumChar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Default"
                android:textColor="@color/Disabled"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/np_char"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/np_char"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblNumCaps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Default"
                android:textColor="@color/Disabled"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/np_cap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/np_cap"
                app:layout_constraintTop_toTopOf="@+id/np_cap" />

            <TextView
                android:id="@+id/lblNumSymbols"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Default"
                android:textColor="@color/Disabled"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/np_symbol"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/np_symbol"
                app:layout_constraintTop_toBottomOf="@+id/np_cap" />

            <TextView
                android:id="@+id/lblNumLower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Default"
                android:textColor="@color/Disabled"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/np_lower"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/np_lower"
                app:layout_constraintTop_toBottomOf="@+id/np_symbol" />

            <TextView
                android:id="@+id/lblNumNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Default"
                android:textColor="@color/Disabled"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/np_num"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/np_num"
                app:layout_constraintTop_toBottomOf="@+id/np_lower" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
